# beaver-study-orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SERVICE_GRADE_SPECKIT.ko.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
app/: main.py  models.py
architecture/: blueprint.json
data/: sample_syllabus.txt
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  demo-package-checklist.md  demo-script-2to4min.md  devpost-description-template.md  enterprise-readiness.md  monetization-playbook.md  openrouter-routing.md  pitch-runbook.md  portfolio-fit.md  product-operating-model.md  project-description-template.md  quality-gate.md  repository-positioning.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-offer.json  service-package.md  submission-checklist.md  system-architecture.md  winning-runbook.md
scripts/: exercise_runtime_scorecard.py
site/: index.html  llms.txt  robots.txt  service-offer.json  sitemap.xml
tests/: test_api.py  test_frontend_first_fold.py  test_frontend_metadata.py  test_history_and_outcomes.py  test_plan_diagnostics.py  test_risk_analytics.py  test_scheduler.py  test_static_surface.py  test_syllabus_parser.py  test_whatif_simulation.py  (+1 more)
(+12 files in other folders)
