[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaver-study-orchestrator"
version = "0.1.0"
description = "Study planning orchestration service with syllabus parsing, planning, what-if analysis, and review surfaces."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
license = "MIT"
dependencies = [
  "fastapi==0.121.1",
  "uvicorn[standard]==0.38.0",
  "pydantic==2.12.5",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "I001"]
